--- a/docs/css/imerss-viz-all.css
+++ b/docs/css/imerss-viz-all.css
@@ -1113,17 +1113,19 @@ a.ui-button:active,
     position: relative;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .imerss-filter-clear {
-    background-image: url(../img/x-circle-close.svg);
-    background-size: 20px;
     position: absolute;
     right: 5px;
     cursor: pointer;
-    width: 20px;
-    height: 20px;
-    border-radius: 6px;
+    width: 28px;
+    height: 28px;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .imerss-filter-clear:hover {
